backend-kubernetes/k8s/ingress.yml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: express-ingress
  namespace: default
spec:
 className: nginx
  rules:
   - http: 
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: express-service
            port:
              number: 80
